fixed mobile align

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 :root {
-  --check: 2px dashed red;
+  --check: 3px dashed red;
 }
 
 /* || TITLE */
@@ -51,23 +51,20 @@ h1 {
 
 /*settings*/
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-self: start;
-  margin: 0 auto;
-  width: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;
+  font-size: 1.5em;
+  text-align: center;
 }
+
+
 form {
   width: 90vw;
 }
 /*problem*/
-#problem .expression {
+.expression {
   font-size: 4em;
-  grid-area: main;
-  margin: auto;
-  padding: 10px;
+  text-align: center;
 }
 #answers {
   width: 100%;
@@ -113,13 +110,19 @@ footer {
 .hidden {
   display:none;
 }
-.settings form div {
-  align-items: center;
+
+.settings-form {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 25px;
-  margin-bottom: 0;
+  align-items: center;
+}
+.settings-form div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 input, select {
@@ -133,10 +136,7 @@ form {
   flex-direction: column;
   align-items: center;
 }
-main {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.5em;
-}
+
 #btnStartOver:hover {
   font-size: 1.5em;
   min-width: auto;
